--- a/package.json
+++ b/package.json
@@ -2,13 +2,17 @@
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://mohamed-shiha.github.io/Portfolio",
   "dependencies": {
     "@heroicons/react": "^2.1.5",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "framer-motion": "^11.11.10",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
+    "react-intersection-observer": "^9.13.1",
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
     "tailwindcss": "^3.4.14",
@@ -18,7 +22,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
