--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "homepage": "https://mohamed-shiha.github.io/Portfolio",
   "dependencies": {
     "@heroicons/react": "^2.1.5",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
